src/test/deca/codegen/invalid/variable_already_use.deca
// Description:
//    Program testing a var already exist  
//
// Results:
//    error
//
// History:
//    Created on 9/01/2025

{
    int y = 45;
    int y = 20;
}
